<resources>
    <string name="app_name">LoginApp_MVVM</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? <b>Register Now</b></string>
    <string name="email">Email</string>
    <string name="email_hint">john@mail.czom</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_an_account_login_now">Already have an account? <b>Login Now</b></string>
</resources>