<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data>
        <variable
            name="mainActivity"
            type="com.example.loginapp_mvvm.MainActivity" />

        <variable
            name="loginViewModel"
            type="com.example.loginapp_mvvm.viewmodel.LoginViewModel" />
    </data>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/main_div"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    >

<!--                    <ImageView-->
<!--                        android:id="@+id/imageView2"-->
<!--                        android:layout_width="350dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginTop="128dp"-->
<!--                        android:src="@drawable/ic_launcher_background"-->
<!--                        android:visibility="invisible"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintTop_toTopOf="parent" />-->

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:text="@string/email"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints" />

                    <EditText
                        android:id="@+id/editTextTextEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:ems="10"
                        android:text="@={loginViewModel.email}"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/password"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

                    <EditText
                        android:id="@+id/editTextTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:ems="10"
                        android:text="@={loginViewModel.password}"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <Button
                        android:id="@+id/buttonLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:onClick="@{()->mainActivity.login()}"
                        android:text="@string/login"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword" />

                    <TextView
                        android:id="@+id/textViewForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:text="@string/forgot_your_password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

                    <ProgressBar
                        android:id="@+id/progressbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textViewRegisterNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_below="@+id/main_div"
                    android:text="@string/don_t_have_an_account_register_now"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>


</layout>
